# bitbankutil_rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  bitbank_exec_book_xrp_jpy_v2_20251014.txt  codex-report.md  prompt.md  ref_lib.md  refactor-plan.md
.github/workflows/: rust.yml
examples/: best_mm.rs  best_mm_backtest.rs  board_viewer.rs  board_viewer_multiple.rs  nothing_bot.rs
src/: bitbank_bot.rs  bitbank_multiple_bot.rs  bitbank_private.rs  bitbank_public.rs  bitbank_structs.rs  error.rs  lib.rs  market_event.rs  order_domain.rs  order_executor.rs  order_manager.rs  paper_execution.rs  response_handler.rs  trading_api.rs  websocket_handler.rs
src/backtest/: mod.rs
src/bitbank_structs/: websocket_struct.rs
src/strategies/: best_mm.rs  mod.rs
tests/: live_private_api.rs  live_private_order_api.rs  live_public_api.rs
