[package]
name = "bitbankutil_rs"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
rust_decimal = { version = "1.36.0", features = ["serde-with-float"] }
crypto-botters = {git = "https://github.com/Harui-i/crypto-botters.git", branch="feature/bitbank", features = ["bitbank"]}
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.6"
log = "0.4.20"