[package]
name = "bitbankutil_rs"
version = "0.1.7"
edition = "2021"

[features]
# bitbankのAPIレスポンスをstructにする際に、使われていないフィールドを許容しないようにするfeature。
strict-validation = []
# 実際のbitbank Public APIを叩くテストを有効にするfeature。
live-public-api = []
# 実際のbitbank Private APIを叩く読み取り系テストを有効にするfeature。
live-private-api = []
# 実注文・キャンセルを伴うPrivate APIテストを有効にするfeature。
live-private-order-api = ["live-private-api"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rust_decimal = { version = "1.36.0", features = ["serde-with-float"] }
crypto-botters = { git = "https://github.com/Harui-i/crypto-botters.git", branch = "feature/bitbank", features = [
  "bitbank",
] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.6"
log = "0.4.20"
serde_ignored = "0.1.14"
